# course-agent

./: .gitignore  Edstellar_Intelligence_Hub_Verified.html  README.md
.github/workflows/: agent-daily.yml  alert-approval-rate.yml  alert-daily-missing.yml  alert-spend.yml  auto-promote.yml  backup-schema.yml
app/: next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sentry.edge.config.ts
app/scripts/: courses-seed.json  digest-template-preview.ts  import_courses.ts  smoke-test.ts
app/src/: instrumentation-client.ts  proxy.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: add-category-modal.tsx  app-nav.tsx  categories-view.tsx  category-cell.tsx  category-form-modal.tsx  decision-panel.tsx  email-recipients-manager.tsx  inventory-upload-modal.tsx  kpi-card.tsx  model-picker-modal.tsx  needs-revision-modal.tsx  page-header.tsx  prompt-version-row.tsx  reject-modal.tsx  rule-badge.tsx  send-email-modal.tsx  (+5 more)
docs/: adding-courses.md  anthropic-research.md  deploy-coolify-cron.md  edstellar_agent_build_plan.md  edstellar_agent_ui_mockups.html  edstellar_course_discovery_agent_plan.md  gas-email-relay.md  nextsteps.md  phase2.md  phase3.md  phase5.md  phase6.md  phase7.md  phase8.md  phase9.md  research-methodology.md  runbook.md  serper-verify.md  settings-models-persistence.md
engine/: .env.example  README.md  pyproject.toml
engine/src/engine/: cli.py  config.py  sentry.py  supabase.py
engine/src/engine/agent/: __init__.py  candidate.py  few_shot.py  graph.py  guardrails.py  state.py
engine/src/engine/agent/nodes/: __init__.py  cross_batch_dedupe.py  feedback_ingest.py  gap_analyze.py  inventory_read.py  needs_revision_retry.py  persist.py  research.py  rule_engine.py
engine/src/engine/llm/: __init__.py  anthropic.py  langfuse_hook.py  openrouter.py  serper.py  voyage.py
engine/src/engine/prompts/: __init__.py  category_guardrails.json  cert_judge.txt  needs_revision_retry.txt  ref_verifier.txt  research_system.txt  versioned.py
engine/src/engine/rules/: __init__.py  dispatcher.py  rule_02_existing_course.py  rule_03_price.py  rule_04_format.py  rule_05_08_structural.py  rule_06_category.py  rule_07_references.py  rule_09_recent_rejection.py  rule_10_cert_name.py
engine/src/engine/rules/data/: cert_blocklist.txt
engine/src/engine/scripts/: _alerts.py  auto_promote.py  backfill_suggestion_embeddings.py  check_approval_rate.py  check_daily_run.py  check_spend.py  embed_courses.py  regenerate_prompt.py  seed_research_prompt.py  smoke_test.py
engine/tests/: test_guardrails.py  test_openrouter_wrapper.py  test_phase8_cleanup.py  test_rules.py
scripts/: setup-coolify-cron.sh
supabase/: README.md
supabase/migrations/: 0001_initial.sql  0002_seed_rejection_taxonomy.sql  0003_courses_unique_num.sql  0004_is_admin_uses_course_agent_role.sql  0005_grant_writes_to_authenticated.sql  0006_seed_test_suggestions.sql  0007_get_few_shot_examples.sql  0008_suggestions_parent_id.sql  0009_digest_recipients.sql  0010_suggestions_assignee_id.sql  0011_audit_log.sql  0012_audit_log_nullable_actor.sql  0013_grant_digest_recipients_writes.sql  0014_suggestions_richer_fields.sql  0015_closest_courses_for_suggestions.sql  0016_closest_courses_top_n.sql
(+44 files in other folders)
