[project]
name = "engine"
version = "0.1.0"
description = "Nightly Python agent that surfaces enterprise-grade corporate-training candidates for Edstellar reviewers."
readme = "README.md"
authors = [
    { name = "Edstellar Marketing", email = "vijay@edstellar.com" },
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.14.1",
    "supabase>=2.30.0",
    # Phase 6 — agent pipeline
    "langgraph>=0.2",
    "scrapegraphai>=1.30",
    "rapidfuzz>=3.10",
    "numpy>=2.1",
    "tiktoken>=0.8",
    "langfuse>=4.6,<5",   # Phase 9 — pinned to the API we depend on
    # Phase 9 — observability
    "sentry-sdk[httpx]>=2.20",
]

[project.scripts]
engine = "engine:main"
smoke = "engine.scripts.smoke_test:main"
embed_courses = "engine.scripts.embed_courses:main"
agent = "engine.cli:main"
backfill_suggestions = "engine.scripts.backfill_suggestion_embeddings:main"
regenerate_prompt = "engine.scripts.regenerate_prompt:main"
# Phase 9 Step 6 monitoring alerts
check_daily_run = "engine.scripts.check_daily_run:main"
check_approval_rate = "engine.scripts.check_approval_rate:main"
check_spend = "engine.scripts.check_spend:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "mypy>=1.18",
    "pytest>=8.4",
    "pytest-asyncio>=0.25",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit security
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = ["S101"]  # allow asserts in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
